--- a/Swagger.Net.WebAPI/Swagger.Net.WebAPI/packages.config
+++ b/Swagger.Net.WebAPI/Swagger.Net.WebAPI/packages.config
@@ -9,7 +9,7 @@
   <package id="Microsoft.AspNet.Providers.Core" version="1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Providers.LocalDB" version="1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20505.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0-beta2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0-beta3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="4.0.20505.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20505.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20505.0" targetFramework="net45" />
@@ -19,7 +19,9 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.20505.0" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.0.20505.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Microsoft.Web.Optimization" version="1.0.0-beta" targetFramework="net45" />
   <package id="Modernizr" version="2.0.6" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="4.5.7" targetFramework="net45" />
   <package id="WebGrease" version="1.0.0" targetFramework="net45" />
 </packages>
