Updated documentation to include changes to support new nuget package for 0.5.2

--- a/Swagger.Net.WebAPI/Swagger.Net.WebAPI/Swagger.Net.WebAPI.csproj
+++ b/Swagger.Net.WebAPI/Swagger.Net.WebAPI/Swagger.Net.WebAPI.csproj
@@ -40,6 +40,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>App_Data\Docs.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Antlr3.Runtime">
@@ -169,7 +170,9 @@
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Swagger.Net\Swagger.Net.csproj">
