--- a/Swagger.Net/Swagger.Net.csproj
+++ b/Swagger.Net/Swagger.Net.csproj
@@ -53,11 +53,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Api.cs" />
+    <Compile Include="Models\ApiDeclaration.cs" />
+    <Compile Include="Models\ApiErrorResponse.cs" />
+    <Compile Include="Models\ApiOperation.cs" />
+    <Compile Include="Models\ApiOperationParameter.cs" />
+    <Compile Include="Models\ResourceListing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SwaggerModels.cs" />
-    <Compile Include="SwaggerActionFilter.cs" />
+    <Compile Include="SwaggerConfiguration.cs" />
     <Compile Include="SwaggerController.cs" />
-    <Compile Include="XmlCommentDocumentationProvider.cs" />
+    <Compile Include="Utilities\XmlCommentDocumentationReader.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
