--- a/Swagger.Net.WebAPI/Web.config
+++ b/Swagger.Net.WebAPI/Web.config
@@ -12,6 +12,7 @@
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Swagger.Net.WebApi-20120826143632;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Swagger.Net.WebApi-20120826143632.mdf" />
   </connectionStrings>
   <appSettings>
+    <add key="document_controller_alias" value="api" />
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
